--- a/test-output/spark/SparkReport.html
+++ b/test-output/spark/SparkReport.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Test2</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Nov 25, 2021 18:37:01 PM</span></a>
+<a href="#"><span class="badge badge-primary">May 13, 2022 22:45:25 PM</span></a>
 </li>
 </ul>
 </div>
@@ -66,13 +66,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Nov 25, 2021 18:37:01 PM</h3>
+<h3>May 13, 2022 22:45:25 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Nov 25, 2021 18:37:30 PM</h3>
+<h3>May 13, 2022 22:46:04 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -143,7 +143,7 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='100%'><b>3</b> steps passed</small></div>
+<div><small data-tooltip='100%'><b>1</b> steps passed</small></div>
 <div>
 <small data-tooltip='0%'><b>0</b> steps failed,
 <b>0</b> skipped, <b data-tooltip='%'>0</b> others
@@ -162,7 +162,7 @@
 </div></div>
 <script>
 var timeline = {
-"Get the Request call Back":26.979
+"Get the Request call Back":37.373
 };
 </script>
 <div class="row">
@@ -172,7 +172,7 @@ var timeline = {
 <div class="card-body pb-0 pt-0"><table class="table table-sm table-bordered">
 <thead><tr class="bg-gray"><th>Name</th><th>Passed</th><th>Failed</th><th>Skipped</th><th>Others</th><th>Passed %</th></tr></thead><tbody>
 <tr>
-<td>@Enter_Form_Details</td>
+<td>@SmokeTest</td>
 <td>1</td>
 <td>0</td>
 <td>0</td>
@@ -180,7 +180,7 @@ var timeline = {
 <td>100%</td>
 </tr>
 <tr>
-<td>@SmokeTest</td>
+<td>@Enter_Form_Details</td>
 <td>1</td>
 <td>0</td>
 <td>0</td>
@@ -207,7 +207,7 @@ warningChild: 0,
 skipChild: 0,
 infoChild: 0,
 grandChildCount: 5,
-passGrandChild: 3,
+passGrandChild: 1,
 failGrandChild: 0,
 warningGrandChild: 0,
 skipGrandChild: 0,
@@ -232,7 +232,7 @@ eventsCount: 5,
 <li class="dropdown">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-tag"></i></a>
 <ul id="tag-toggle" class="dropdown-menu dropdown-md p-v-0">
-<a class="dropdown-item" href="#">@Enter_Form_Details</a><a class="dropdown-item" href="#">@SmokeTest</a>
+<a class="dropdown-item" href="#">@SmokeTest</a><a class="dropdown-item" href="#">@Enter_Form_Details</a>
 </ul>
 </li>
 </ul>
@@ -245,7 +245,7 @@ eventsCount: 5,
           <div class="test-detail">
             <p class="name">Get the Request call Back</p>
             <p class="text-sm">
-              <span>18:37:02</span> / <span>00:00:26:979</span>
+              <span>22:45:26</span> / <span>00:00:37:373</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -254,9 +254,9 @@ eventsCount: 5,
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Get the Request call Back</h5>
-<span class='badge badge-success'>11.25.2021 18:37:02</span>
-<span class='badge badge-danger'>11.25.2021 18:37:29</span>
-<span class='badge badge-default'>00:00:26:979</span>
+<span class='badge badge-success'>05.13.2022 22:45:26</span>
+<span class='badge badge-danger'>05.13.2022 22:46:03</span>
+<span class='badge badge-default'>00:00:37:373</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -271,31 +271,14 @@ eventsCount: 5,
         <div class="node" id="2"><span class="badge log pass-bg mr-2">Pass</span>Enter the mandatory details in the form</div>
       </div>
     </div>
-        <div class="scenario_outline collapse">
-            <div class="card-body l1">
-              <div class="card-header">
-                <div class="card-title outline-child">
-                  <div class="node" id="3"><span class="badge log pass-bg mr-2">Pass</span>Enter the mandatory details in the form</div>
-                </div>
+        <div class="collapse">
+          <div class="card-body">
+              <div class="step pass-bg" title="com.UI_Automation.stepdef.HomePage_StepDef.user_is_in_contact_us_page()">
+                <span>Given User is in Contact-us page</span>
+      <div>
+      </div>
               </div>
-              <div class="card-body mt-3 collapse">
-                  <div class="step pass-bg">
-                    <span>Given User is in Contact-us page</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>When User enters the below details in the Request Call back form "Sunil","shankaramurthy","msunil1@gmail.com","0740000000","4 PM","Conveyancing"</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>Then user should be able to see the entered details in the form</span>
-      <div>
-      </div>
-                  </div>
-              </div>
-            </div>
+          </div>
         </div>
   </div>
 </div>
@@ -323,42 +306,6 @@ eventsCount: 5,
 <span class="meta">
 <span class='badge log pass-bg'>1</span>
 </span>
-<p class="name">@Enter_Form_Details</p>
-<p class="duration text-sm">1 tests</p>
-</div>
-<div class="test-contents d-none">
-<div class="info">
-<h4>@Enter_Form_Details</h4>
-<span status="pass" class='badge log pass-bg'>1 passed</span>
-</div>
-<table class='table table-sm mt-4'>
-<thead>
-<tr>
-<th class="status-col">Status</th>
-<th class="timestamp-col">Timestamp</th>
-<th>TestName</th>
-</tr>
-</thead>
-<tbody>
-<tr class="tag-test-status" status="pass">
-<td><span class="badge log pass-bg">Pass</span></td>
-<td>18:37:02 PM</td>
-<td>
-<a href="#" class="linked" test-id='1' id='3'>Enter the mandatory details in the form</a>
-<div class="">
-<span class="badge badge-default">Get the Request call Back.Enter the mandatory details in the form</span>
-</div>
-</td>
-</tr>
-</tbody>
-</table>
-</div>
-</li>
-<li class="test-item">
-<div class="test-detail">
-<span class="meta">
-<span class='badge log pass-bg'>1</span>
-</span>
 <p class="name">@SmokeTest</p>
 <p class="duration text-sm">1 tests</p>
 </div>
@@ -378,9 +325,45 @@ eventsCount: 5,
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>18:37:02 PM</td>
+<td>22:45:26 PM</td>
 <td>
-<a href="#" class="linked" test-id='1' id='3'>Enter the mandatory details in the form</a>
+<a href="#" class="linked" test-id='1' id='2'>Enter the mandatory details in the form</a>
+<div class="">
+<span class="badge badge-default">Get the Request call Back.Enter the mandatory details in the form</span>
+</div>
+</td>
+</tr>
+</tbody>
+</table>
+</div>
+</li>
+<li class="test-item">
+<div class="test-detail">
+<span class="meta">
+<span class='badge log pass-bg'>1</span>
+</span>
+<p class="name">@Enter_Form_Details</p>
+<p class="duration text-sm">1 tests</p>
+</div>
+<div class="test-contents d-none">
+<div class="info">
+<h4>@Enter_Form_Details</h4>
+<span status="pass" class='badge log pass-bg'>1 passed</span>
+</div>
+<table class='table table-sm mt-4'>
+<thead>
+<tr>
+<th class="status-col">Status</th>
+<th class="timestamp-col">Timestamp</th>
+<th>TestName</th>
+</tr>
+</thead>
+<tbody>
+<tr class="tag-test-status" status="pass">
+<td><span class="badge log pass-bg">Pass</span></td>
+<td>22:45:26 PM</td>
+<td>
+<a href="#" class="linked" test-id='1' id='2'>Enter the mandatory details in the form</a>
 <div class="">
 <span class="badge badge-default">Get the Request call Back.Enter the mandatory details in the form</span>
 </div>
